src/objects/CBL2_Farm__c.object
<CustomObject>
    <fields>
        <fullName>CBL2_Farms_Farmer__c</fullName>
        <label>CBL2_Farms_Farmer</label>
        <referenceTo>CBL2_Farmer__c</referenceTo>
        <relationshipLabel>CBL2_Farms_Farmer</relationshipLabel>
        <relationshipName>CBL2_Farms_Farmer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CP_Calculation_Date__c</fullName>
        <label>CP Calculation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Coffee_planted_area_Cuerdas_25X25__c</fullName>
        <formula>coffeePlantedArea__c * 0.044</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coffee planted area (Cuerdas 25X25)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coffee_planted_area_Ha__c</fullName>
        <formula>CASE(TEXT(coffeePlantedAreaUnits__c),&quot;Cuadras&quot;, coffeePlantedArea__c *1.5625, 
&quot;Manzanas&quot;, coffeePlantedArea__c *0.6988, 
&quot;Cuerdas (25x25)&quot;, coffeePlantedArea__c *0.044,
&quot;Cuerdas (40x40)&quot;, coffeePlantedArea__c *0.112,
coffeePlantedArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coffee planted area (Ha)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desp_Mal_estado_tira_grano_en_la_pulpa__c</fullName>
        <formula>IF(INCLUDES(wetmill_pulpingMachinesStatus__c , &quot;Mal estado tira grano en la pulpa&quot;), &quot;Sí&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desp - Mal estado tira grano en la pulpa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desp_Mal_estado_tira_pulpa_con_el_gran__c</fullName>
        <formula>IF(INCLUDES(wetmill_pulpingMachinesStatus__c , &quot;Mal estado tira pulpa con el grano&quot;), &quot;Sí&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desp - Mal estado tira pulpa con el gran</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_Code_Guat__c</fullName>
        <label>Farm Code Guat</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Farm_area_Cuerdas_25X25__c</fullName>
        <formula>Farm_area_Ha__c * 0.04</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Farm area (Cuerdas 25X25)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Farm_area_Ha__c</fullName>
        <formula>IF(text( totalFarmAreaUnits__c ) = &quot;Cuadras&quot;, totalFarmArea__c *1.5625, 
IF(text( totalFarmAreaUnits__c ) = &quot;Manzanas&quot;, totalFarmArea__c *0.6988, 
IF(text( totalFarmAreaUnits__c ) =&quot;Cuerdas (25x25)&quot;, totalFarmArea__c *0.044, 
IF(text( totalFarmAreaUnits__c ) =&quot;Cuerdas (40x40)&quot;, totalFarmArea__c *0.112, totalFarmArea__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Farm area (Ha)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FarmerId__c</fullName>
        <formula>Farmer__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FarmerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farmer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Farmer</label>
        <referenceTo>LAC_Farmer_Details__c</referenceTo>
        <relationshipLabel>CBL2_Farms_LFD</relationshipLabel>
        <relationshipName>CBL2_Farms_LFD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forest_Area_Cuerdas_25X25__c</fullName>
        <formula>Forest_Area_Ha__c * 0.044</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forest Area (Cuerdas 25X25)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forest_Area_Ha__c</fullName>
        <formula>IF(text( unitForestArea__c ) = &quot;Cuadras&quot;, forestArea__c *1.5625, 
IF(text( unitForestArea__c ) = &quot;Manzanas&quot;, forestArea__c *0.6988, 
IF(text( unitForestArea__c )=&quot;Cuerdas (25x25)&quot;, forestArea__c *0.044, 
IF(text( unitForestArea__c )=&quot;Cuerdas (40x40)&quot;, forestArea__c *0.112, forestArea__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forest Area (Ha)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_FMP_Year__c</fullName>
        <label>Last FMP Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude_farm__c</fullName>
        <formula>Submission_Farm__r.gfsurveys__gps_y__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latitude_farm</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude_farm__c</fullName>
        <formula>Submission_Farm__r.gfsurveys__gps_x__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Longitude_farm</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_planted_area_Cuerdas_25X25__c</fullName>
        <formula>newPlantedArea__c * 0.044</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New planted area (Cuerdas 25X25)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_planted_area_Ha__c</fullName>
        <formula>IF(text( newPlantedAreaUnits__c ) = &quot;Cuadras&quot;, newPlantedArea__c *1.5625, 
IF(text( newPlantedAreaUnits__c ) = &quot;Manzanas&quot;, newPlantedArea__c *0.6988, 
IF(text( newPlantedAreaUnits__c )=&quot;Cuerdas (25x25)&quot;, newPlantedArea__c *0.044, 
IF(text( newPlantedAreaUnits__c )=&quot;Cuerdas (40x40)&quot;, newPlantedArea__c *0.112, newPlantedArea__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New planted area (Ha)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organic_fertilized_area_Cuerdas_25X25__c</fullName>
        <formula>Organic_fertilized_area_Ha__c * 0.044</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organic fertilized area (Cuerdas 25X25)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organic_fertilized_area_Ha__c</fullName>
        <formula>CASE(TEXT(organicFertAreaThisYrUnits__c),&quot;Cuadras&quot;, organicFertAreaThisYr__c *1.5625, 
&quot;Manzanas&quot;, organicFertAreaThisYr__c *0.6988, 
&quot;Cuerdas (25x25)&quot;, organicFertAreaThisYr__c *0.044,
&quot;Cuerdas (40x40)&quot;, organicFertAreaThisYr__c *0.112,
organicFertAreaThisYr__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organic fertilized area (Ha)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_agricultural_activities_area_Cuer__c</fullName>
        <formula>Other_agricultural_activities_area_Ha__c * 0.044</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other agricultural activities area (Cuer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_agricultural_activities_area_Ha__c</fullName>
        <formula>IF(text( otherActivitiesAreaUnits__c ) = &quot;Cuadras&quot;, otherActivitiesArea__c *1.5625, 
IF(text( otherActivitiesAreaUnits__c ) = &quot;Manzanas&quot;, otherActivitiesArea__c *0.6988, 
IF(text( otherActivitiesAreaUnits__c )=&quot;Cuerdas (25x25)&quot;, otherActivitiesArea__c *0.044, 
IF(text( otherActivitiesAreaUnits__c )=&quot;Cuerdas (40x40)&quot;, otherActivitiesArea__c *0.112, otherActivitiesArea__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other agricultural activities area (Ha)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_last_year_Kg__c</fullName>
        <formula>IF(text( prodLastHarvestUnits__c ) = &quot;Quintales&quot;, productionLastHarvest__c *45.3592, 
IF(text( prodLastHarvestUnits__c ) = &quot;Arrobas&quot;, productionLastHarvest__c *11.5, 
IF(text( prodLastHarvestUnits__c )=&quot;Libras&quot;, productionLastHarvest__c *0.453597024, productionLastHarvest__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production last year (Kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_last_year_Quintales__c</fullName>
        <formula>Production_last_year_Kg__c * 0.022</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production last year (Quintales)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_last_year_green_coffee_Kg__c</fullName>
        <formula>Production_last_year_Kg__c *0.754</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production last year green coffee (Kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity_Kg_Ha__c</fullName>
        <formula>Production_last_year_Kg__c/Coffee_planted_area_Ha__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity (Kg/Ha)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity_Quintal_Cuerda25X25__c</fullName>
        <formula>Production_last_year_Quintales__c / Coffee_planted_area_Cuerdas_25X25__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity (Quintal/Cuerda25X25)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pruned_area_Cuerdas_25X25__c</fullName>
        <formula>Pruned_area_Ha__c * 0.044</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pruned area (Cuerdas 25X25)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pruned_area_Ha__c</fullName>
        <formula>IF(text( pruneAreaLastYearUnits__c ) = &quot;Cuadras&quot;, pruneAreaLastyear__c *1.5625, 
IF(text( pruneAreaLastYearUnits__c ) = &quot;Manzanas&quot;, pruneAreaLastyear__c *0.6988, 
IF(text( pruneAreaLastYearUnits__c )=&quot;Cuerdas (25x25)&quot;, pruneAreaLastyear__c *0.044, 
IF(text( pruneAreaLastYearUnits__c )=&quot;Cuerdas (40x40)&quot;, pruneAreaLastyear__c *0.112, pruneAreaLastyear__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pruned area (Ha)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewed_area_Cuerdas_25X25__c</fullName>
        <formula>Renewed_area_Ha__c * 0.044</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewed area (Cuerdas 25X25)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewed_area_Ha__c</fullName>
        <formula>IF(text( areaRenewedCoffeeUnits__c ) = &quot;Cuadras&quot;, areaRenewedCoffee__c *1.5625, 
IF(text( areaRenewedCoffeeUnits__c ) = &quot;Manzanas&quot;, areaRenewedCoffee__c *0.6988, 
IF(text( areaRenewedCoffeeUnits__c )=&quot;Cuerdas (25x25)&quot;, areaRenewedCoffee__c *0.044, 
IF(text( areaRenewedCoffeeUnits__c )=&quot;Cuerdas (40x40)&quot;, areaRenewedCoffee__c *0.112, areaRenewedCoffee__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewed area (Ha)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <formula>IMAGE( signatureURL__c , &quot;&quot;, 200, 400)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Farm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission_Farm</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL2_Farms_Submission_Farm</relationshipLabel>
        <relationshipName>CBL2_Farms_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_Wetmill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission_Wetmill</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL2_Farms_Submission_Wetmill</relationshipLabel>
        <relationshipName>CBL2_Farms_Submission_Wetmill</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wetmill_separatedGrainsProcessedAppart__c</fullName>
        <label>Wetmill_separatedGrainsProcessedAppart</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agrochemElimin100MtsAwayWater__c</fullName>
        <label>agrochemElimin100MtsAwayWater</label>
        <picklist>
            <picklistValues>
                <fullName>Si se cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica, no usa agroquímicos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agrochemOriginalContainerProperUse__c</fullName>
        <label>agrochemOriginalContainerProperUse</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cumple parcialmente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica, no usa agroquímicos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>altitudInMOSL__c</fullName>
        <label>altitudInMOSL</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>areaRenewedCoffeeUnits__c</fullName>
        <label>areaRenewedCoffeeUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25x25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>areaRenewedCoffee__c</fullName>
        <label>areaRenewedCoffee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>biologicalDiversityContrib__c</fullName>
        <label>biologicalDiversityContrib</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>chemicalFertilizersUseLastYr__c</fullName>
        <label>chemicalFertilizersUseLastYr</label>
        <picklist>
            <picklistValues>
                <fullName>No aplica fertilizantes químicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fórmula completa N-P-K-Mg-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula completa N-P-K (15-15-15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula Completa N-P-K (20-20-0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula Completa (DAP) N-P-K (18-46-0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula Completa (MAP) N-P-K (11-50-0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula Completa (20-0-20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urea N (46)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitrato de amonio N (33)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfato de amonio N- S (21-24)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muriato de Potasio MOP K (60)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfato de Potasio K-S (50-18)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloruro de Potasio K-Cl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula de acuerdo a análisis de suelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>cleanTransportContainers__c</fullName>
        <label>cleanTransportContainers</label>
        <picklist>
            <picklistValues>
                <fullName>Están limpios y aptos para la cosecha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Están sucios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sirven para manipular agroquimicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sirven para manipular abonos orgánicos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>coffeCuttingPolicy__c</fullName>
        <label>coffeCuttingPolicy</label>
        <picklist>
            <picklistValues>
                <fullName>No corta y/o separa el café verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separa el café sobre maduro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separa café caído al suelo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>coffeProcessingPlace__c</fullName>
        <label>coffeProcessingPlace</label>
        <picklist>
            <picklistValues>
                <fullName>Alquila el servicio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficio colectivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficio familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficio propio en casa u otro predio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficio propio en la finca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vende en cereza/uva/fruta</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>coffeeInvoicesRegistered__c</fullName>
        <label>coffeeInvoicesRegistered</label>
        <picklist>
            <picklistValues>
                <fullName>Sí, con toda la información requerida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí, pero NO con toda la información</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cuenta con registro facturas/recibos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>coffeePlantedAreaUnits__c</fullName>
        <label>coffeePlantedAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25x25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>coffeePlantedArea__c</fullName>
        <label>coffeePlantedArea</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coffeeProcessingPlanDistance__c</fullName>
        <label>coffeeProcessingPlanDistance</label>
        <picklist>
            <picklistValues>
                <fullName>más de 4 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>menos de 1 hora</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>containersNotReused__c</fullName>
        <label>containersNotReused</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cumple parcialmente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica, no usa agroquímicos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>contaminationProtectionMeasures__c</fullName>
        <label>contaminationProtectionMeasures</label>
        <picklist>
            <picklistValues>
                <fullName>Acequias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zonas de amortiguamiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barreras vivas/Barreras físicas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tratamiento de aguas residuales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eliminación segura de desechos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No hay suficientes medidas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>contaminationRiskZones__c</fullName>
        <label>contaminationRiskZones</label>
        <picklist>
            <picklistValues>
                <fullName>Area de cultivo norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area de cultivo sur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area de cultivo Este</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area de cultivo oeste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adentro del área de cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durante la cosecha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transporte</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>contaminationSources__c</fullName>
        <label>contaminationSources</label>
        <picklist>
            <picklistValues>
                <fullName>Ríos contamidados y/o Aguas no tratadas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agroquímicos usados por vecinos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agroquímicos usados en la parcela/finca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desechos o envases de agroquímicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P. orgánicos usados en la parcela/finca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P. Orgánicos usados por vecinos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carreteras, ciudades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letrinas cerca/dentro de la plantación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>dangSubstancesManipulatorsTrained__c</fullName>
        <label>dangSubstancesManipulatorsTrained</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica, no usa sustancias peligrosas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>discrimination__c</fullName>
        <label>discrimination</label>
        <picklist>
            <picklistValues>
                <fullName>De acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medianamente de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En desacuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>diseaseControlAgrochemicals__c</fullName>
        <label>diseaseControlAgrochemicals</label>
        <picklist>
            <picklistValues>
                <fullName>No usa ningún producto químico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxiconazole (Opus 12.5 SC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyproconazole (Alto 10 SL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiadimenol (Caporal 25 DC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tebuconazole (Atlas 25 EW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tebuconazole+Triadimenol-Silvacur Combi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eposiconazole+Carbenzadim (Duett 25 SC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azoxystorbin + Cyproconazole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxyconazole + Pyraclostrobin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carbendazim (Derosal 50 SC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propamocarb Fosetilato (Previcur)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>diseaseControlApplicationNumber__c</fullName>
        <label>diseaseControlApplicationNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diseaseControlOrganicProducts__c</fullName>
        <label>diseaseControlOrganicProducts</label>
        <picklist>
            <picklistValues>
                <fullName>No usa ningún producto orgánico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caldo bordelés</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caldo visosa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caldo sulfocálcico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfato de cobre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfacto de zinc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfato de magnesio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidróxido de cobre (Cobre)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Óxido de cobre (Cobre)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxicloruro de cobre (Cobre)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>doesPlagues_DiseaseSampling__c</fullName>
        <label>doesPlagues&amp;DiseaseSampling</label>
        <picklist>
            <picklistValues>
                <fullName>Sí hace muestreos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No hace muestreos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>doesSoilSampling__c</fullName>
        <label>doesSoilSampling</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>doesSoilTreatmentCorrectPH__c</fullName>
        <label>doesSoilTreatmentCorrectPH</label>
        <picklist>
            <picklistValues>
                <fullName>Si hace, basado en análisis de suelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No hace, basado en análisis de suelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si hace, sin análisis de suelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No conoce esta práctica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>